--- a/produto/produto.listagem.html
+++ b/produto/produto.listagem.html
@@ -67,7 +67,7 @@
               <input
                 type="number"
                 name="valor-min"
-                id="input-valor-min"
+                id="valor-min"
                 placeholder="R$0.00"
               />
             </div>
@@ -76,7 +76,7 @@
               <input
                 type="number"
                 name="valor-max"
-                id="input-valor-max"
+                id="valor-max"
                 placeholder="R$0.00"
               />
             </div>
