--- a/endereco.detalhe.v2.html
+++ b/endereco.detalhe.v2.html
@@ -6,7 +6,7 @@
         <!-- Importações de scripts JS, bibliotecas externas, arquivos CSS... -->
 
         <script src="./js/endereco.detalhe.js"></script>
-        <link rel="stylesheet" href="./CSS/style.css">
+        <link rel="stylesheet" href="CSS/style.css">
     </head>
     <body>
         <header class="cabecalho">
