--- a/fornecedor/fornecedor_listagem.html
+++ b/fornecedor/fornecedor_listagem.html
@@ -14,6 +14,7 @@
         <section class="section__principal">
         <input class="formulario__fieldset__botao" id="botao" type="button" value="Buscar" onclick="buscarTodosFabricantes()" />
         <input class="formulario__fieldset__botao" id="botao" type="button" value="Limpar" onclick="limpar()" />
+        <button class="formulario__fieldset__botao" type="button" onclick="window.history.back()">Voltar</button>
           <table>
             <thead>
               <th>#</th>
