--- a/fornecedor/fornecedor_cadastro.html
+++ b/fornecedor/fornecedor_cadastro.html
@@ -6,7 +6,9 @@
 
     <!-- Importações de scripts JS, bibliotecas externas, arquivos CSS... -->
     <script src="fornecedor_cadastro.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style_cadastro.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 
 <body>
@@ -15,7 +17,6 @@
         <p class="cabecalho_texto">Informe os dados do fabricante</p>
     </header>
     <main class="principal">
-       
 
         <section class="section__principal">
             <form class="formulario" id="formulario">
@@ -30,30 +31,29 @@
 
                         <div>
                             <label class="formulario__texto" for="cnpj">Cnpj:</label>
-                            <input class="formulario__fieldset__input__descricao" type="text" id="cnpj" name="cnpj"
+                            <input class="formulario__fieldset__input__descricao" maxlength="14" type="text" id="cnpj" name="cnpj"
                                 required />
                         </div>
 
                         <div>
                             <label class="formulario__texto" for="cep">Cep:</label>
-                            <input class="formulario__fieldset__input__descricao" type="text" id="cep" name="cep" onblur="buscarCEP()">
-                               
+                            <input class="formulario__fieldset__input__descricao" maxlength="9" type="text" id="cep" name="cep" onblur="buscarCEP()" />
                         </div>
 
                         <div>
                             <label class="formulario__texto" for="cidade">Cidade:</label>
                             <input class="formulario__fieldset__input__descricao" type="text" id="cidade" name="cidade"
-                            disabled />
+                                disabled />
                         </div>
 
                         <div>
                             <label class="formulario__texto" for="uf">Uf:</label>
                             <input class="formulario__fieldset__input__descricao" type="text" id="uf" name="uf"
-                            disabled />
+                                disabled />
                         </div>
                         <div>
-                            <label class="formulario__texto"></label>
                             <input class="formulario__fieldset__botao" id="botao" type="button" value="Cadastrar" onblur="cadastrarFabricante()" />
+                            <button class="formulario__fieldset__botao" type="button" onclick="window.history.back()">Voltar</button>
                         </div>
                     </fieldset>
                 </div>
@@ -63,7 +63,6 @@
     <footer class="rodape">
         <p class="rodape_texto"> Cadastro Fornecedor</p>
     </footer>
-
 </body>
 
 </html>
